# parallel-computing

./: README.md
done-books/10,000,000_lines/: 10421.txt  39506.txt
final-term-docs/: .gitignore
final-term/docs/: .gitignore  n-grams-presentation.key  n-grams-stats.numbers  pc_presentation.key
final-term/done-books/10,000,000_lines/: 10031.txt  11206.txt  13627.txt  30878.txt  35321.txt  35914.txt  42416.txt
final-term/done-books/6,000,000_lines/: 10429.txt
final-term/ngrams-cpp/: CMakeLists.txt  Consumer.h  MyMap.h  MyQueue.h  Producer.h  README.md  main.cpp  sequential.cpp
final-term/ngrams-java/: .gitignore  README.md
final-term/ngrams-java/src/it/sv/ngrams/parallel/: Application.java  Consumer.java  MyMap.java  Producer.java
final-term/ngrams-java/src/it/sv/ngrams/sequential/: Application.java
mid-term/docs/: .gitignore  k-means-presentation.key  k-means-stats.numbers
mid-term/k-means/: .gitignore  CMakeLists.txt  README.md  parallel-array-of-structures.cpp  parallel-structure-of-arrays.cpp  parallel.cpp  plot.cpp  sequential.cpp  utility-v2.h  utility.h
ngrams-final-term-cpp/: .gitignore  CMakeLists.txt  MyMap.h  MyQueue.h  sequential.cpp
ngrams-final-term-java/: README.md
ngrams-final-term-java/src/it/sv/ngrams/: Test.java
ngrams-final-term-java/src/it/sv/ngrams/parallel/: Application.java  Producer.java
